test/fails/bad_tags/assign1.lgl
tag a is vec<2>;

void main() {
    vec<2> x = [1., 2.]; 
    a y = x; // No downcasting!
}
